testsuite/tests/overloadedrecflds/should_fail/FieldSelectors.stderr
FieldSelectors.hs:10:1: error: [GHC-29916]
    Multiple declarations of ‘foo’
    At: FieldSelectors.hs:10:1-3
        FieldSelectors.hs:8:18-20

